--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -4,6 +4,7 @@
 }
 
 body {
+  background-color: dimgrey;
   font-family: 'Titillium Web', sans-serif;
   display: flex;
   flex-direction: column;
@@ -16,7 +17,7 @@ body {
 }
 
 h1, h2 {
-  color: #93005a;
+  color: white;
 }
 
 #root {
